--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,22 +1,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:backgroundTint="@color/white"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/noteTitle"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="18sp" />
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="15dp"
+        android:backgroundTint="@color/cream">
 
-    <TextView
-        android:id="@+id/noteDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/noteTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textColor="@color/black"/>
+
+        <TextView
+            android:id="@+id/noteDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_marginTop="4dp"
+            android:textSize="14sp"
+            android:textColor="@color/black"/>
+
+    </androidx.cardview.widget.CardView>
 
     <ImageButton
         android:id="@+id/deleteButton"
@@ -24,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:src="@drawable/baseline_delete_24"
-        android:contentDescription="Delete Note" />
+        android:contentDescription="Delete Note"
+        android:backgroundTint="@color/cream"/>
 
 </LinearLayout>
